--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -123,6 +123,7 @@ body {
     margin: auto;
     padding: 40% 20%;
     text-align: center;
+    font-size: .5em;
 }
 
 #drupal-circle {
@@ -143,6 +144,7 @@ body {
     margin: auto;
     padding: 40% 20%;
     text-align: center;
+    font-size: .5em;
 }
 
 
