dropbox link changed?

--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -4,7 +4,7 @@
 	<a href="http://www.linkedin.com/in/alfrednutile/">http://www.linkedin.com/in/alfrednutile/</a> or  <a href="http://twitter.com/alnutile">http://twitter.com/alnutile
 	</a>
 	<p>Or the infamous resume 
-		<a href="http://dl.dropbox.com/u/54803135/Resume.pdf" target="_blank">here</a>
-	</p>
+	    <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.pdf" target="_blank">here</a>
+    </p>
 	okay more coming soon..
 </div>
