--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,4 @@
-<div>
-  <span id="address-block" class="span2">
+<span id="address-block" class="span3 offset1">
     <address>
     <strong>Alfred Nutile</strong><br>
       Leverett, MA<br>
@@ -9,18 +8,19 @@
   <address>
     <a href="mailto:#">alfrednutile@gmail.com</a>
   </address>
-  </span>
-  <span id="social-block" class="pull-right span5">
-    <ul class="inline">
-     <li id='linked'class='span1'>
-      <%= link_to image_tag("linkedin-4-xl.png", alt: "LinkedIn"), 'http://www.linkedin.com/in/alfrednutile/' %>
-      </li>
-     <li id='twitter'class='span1'>
-      <%= link_to image_tag("twitter-4-xl.png", alt: "Twitter"), 'http://twitter.com/alnutile' %>
-     <li id='gplus'class='span1'>
-      <%= link_to image_tag("google-plus-4-xl.png", alt: "Google+"), 'https://plus.google.com/u/1/113385596438431897721/posts/p/pub' %>
+</span>
+<span id="social-block" class="pull-right span6 offset2">
+  <ul class="inline">
+   <li id='linked'class='span3'>
+    <%= link_to image_tag("linkedin-4-xl.png", alt: "LinkedIn"), 'http://www.linkedin.com/in/alfrednutile/' %>
     </li>
-     <%= link_to image_tag("github-9-xl.png", alt: "GitHub"), 'https://github.com/alnutile' %>
-    </ul>
-  </span>
-</div>
+   <li id='twitter'class='span3'>
+    <%= link_to image_tag("twitter-4-xl.png", alt: "Twitter"), 'http://twitter.com/alnutile' %>
+   <li id='gplus'class='span3'>
+    <%= link_to image_tag("google-plus-4-xl.png", alt: "Google+"), 'https://plus.google.com/u/1/113385596438431897721/posts/p/pub' %>
+  </li>
+  <li id='github'class='span3'>
+   <%= link_to image_tag("github-9-xl.png", alt: "GitHub"), 'https://github.com/alnutile' %>
+   </li>
+  </ul>
+</span>
