--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -1,11 +1,13 @@
-<div id="info-bar" class="navbar navbar-inverse navbar-fixed-top" ng-controller="Menu">
+<div id="info-bar" class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container-fluid">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </a>
-      <span id="brand-bar" class="brand"><span id="brand-info">AlfredNutile.info</span></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <span id="brand-bar" class="brand">AlfredNutile.info</span>
       <div id="menu-top-items" class="nav-collapse collapse">
         <ul id="main-menu" class="nav">
             <li>
