--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -15,4 +15,5 @@ Alfred Nutile, 18+ years of experience in different technologies. Linux, PHP, My
       <a href="http://twitter.com/alnutile"><span id="twitter-circle" class="span3"></span></a>
       <a href="http://drupal.org/user/114629"><span id="drupal-circle" class="span3"></span></a>
     </div>
-  </div></div></div>
+  </div>
+</div>
