--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -1,10 +1,113 @@
-<h1 class="title">About</h1>
-<div>Me?
-	Why put that info here go to 
-	<a href="http://www.linkedin.com/in/alfrednutile/">http://www.linkedin.com/in/alfrednutile/</a> or  <a href="http://twitter.com/alnutile">http://twitter.com/alnutile
-	</a>
-	<p>Or the infamous resume 
-	    <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.pdf" target="_blank">here</a>
-    </p>
-	okay more coming soon..
+<div class="about">
+	<h1>About</h1>
+
+	<ul>
+	<li>Over 6 years building websites from start to end.  Taking numerous websites from spec to deployment. Using technologies like Drupal, PHP, Rails, Angular.js, JavaScript, jQuery, Apache, etc.</li>
+	<li>Over 7 years managing projects, clients and staff. Working alone or with a team to make sure the projects get done.  As well as communicating with the client to make sure the delivered items are meeting their goals.</li>
+	<li>Over 15 years working on Linux systems and managing LAMP setups for Drupal websites, email etc.</li>
+	<li>Over 3 years experience as a presenter at numerous Drupal and other Web related events. Yale, MIT, Smith College and UMASS Amherst.</li>
+	<li>Over 5 years experience as a network and desktop systems admin both Windows and Linux. </li>
+	<li>Recent work on Ruby on Rails.</li>
+	<li>3 Months experience using Angular.js</li>
+	</ul>
+	<h2>Sites</h2>
+
+	<p>
+		You can see a long list of sites below that I have built alone, with a team, some of which I also managed.
+	</p>
+	<div class="row-fluid">
+	<div class="sites span7">
+		<div class="site">http://www.campusservices.harvard.edu<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://fibermark.com<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span><span class="css"></span></div>
+
+		<div class="site">http://activelivingresearch.org<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
+
+		<div class="site">http://digitalshingle.mit.edu<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.law.uconn.edu<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
+
+		<div class="site">http://www.fullercenter.org<span class="some"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
+
+		<div class="site">http://science.mit.edu<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
+
+		<div class="site">http://americanrepertorytheater.org<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://alfrednutile.info<span class="full"></span><span class="js"></span><span class="rails"></span><span class="drupal"></span></div>
+
+		<div class="site">http://burnesscommunications.com<span class="some"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.vtinvasives.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://alumni.williams.edu<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://ohionet.org<span class="full"></span></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.acm-ne.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.ophthalmicedge.org<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://fieldeddy.com<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.myersinfosys.com<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.chroma.com<span class="some"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://clpp.hampshire.edu/<span class="full"></span><span class="php"></span><span class="drupal"></span><span class=notactive></span></div>
+
+		<div class="site">http://drupalcampma.com<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.gaiauniversity.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
+
+		<div class="site">http://www.rfc.org <span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://leaderresource.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
+
+		<div class="site">http://nationalpriorities.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span><span class=notactive></span></div>
+
+		<div class="site">http://www.real-user-monitoring.com<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
+
+		<div class="site">http://www.ctconservation.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span></span></div>
+
+		<div class="site">http://www.cradlefamily.com<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span><span class=notactive></span></div>
+		<div class="site">http://www.stopitnow.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
+
+		<div class="site">http://3blmedia.com<span class="some"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
+
+		<h2>Soon to be released</h2>
+
+		<div class="site">http://drfa.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span>
+		</div>
+		<div class="site">http://uppd.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span>
+		</div>
+	</div>
+		<div class="keys well span3">
+			<h4>Keys</h4> 
+			<div><span class="full"></span>Full Build</div> 
+			<div><span class="some"></span>Some Work</div>
+			<div><span class="php"></span>PHP</div> 
+			<div><span class="rails"></span>Rails</div> 
+			<div><span class="drupal"></span>Drupal</div>  
+			<div><span class="css"></span>Front End</div> 
+			<div><span class="pm"></span>Project Manager</div> 
+			<div><span class="notactive"></span>Version Longer Active</div>
+		</div>
+	</div>
+
+
+	<div class="row">
+		<span class="span12">
+		<h2>More info</h2>
+
+		<p><a href="http://www.linkedin.comin/alfrednutile/">http://www.linkedin.comin/alfrednutile/</a> 
+		or<br />
+		<a href="http://twitter.com/alnutile">http://twitter.comalnutile</a>
+		<p>Or the infamous resume 
+		  <a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a>
+		  <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
+		</p>
+		  okay more coming soon..
+		</div></p>
+		</span>
+	</div>
 </div>
