--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -1,6 +1,6 @@
 <h1 class="title">Alfred Nutile</h1>
 <div>Who?
-Alfred Nutile, 15+ years of experience in different technologies. Linux, PHP, MySQL, Drupal, SysAdmin, LAMP, JS, jQuery, CSS, Consulting
+Alfred Nutile, 15+ years of experience in different technologies. Linux, PHP, MySQL, Drupal, SysAdmin, LAMP, JS, jQuery, CSS, Consulting, Rails, Angular.js, JS, etc..
   <div id="home-circles" class="container-fluid span11">
     <div class="row-fluid">
       <a href="/about"><span id="about-me-circle" class="span3"></span></a>
