--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -13,7 +13,7 @@
 	<h2>Sites</h2>
 
 	<p>
-		You can see a long list of sites below that I have built alone, with a team, some of which I also managed.
+		You can see a long list of sites below that I have built alone or with a team, some of which I also managed.
 	</p>
 	<div class="row-fluid">
 	<div class="sites span7">
@@ -39,11 +39,11 @@
 
 		<div class="site">http://www.vtinvasives.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
 
-		<div class="site">http://alumni.williams.edu<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
+		<div class="site">http://alumni.williams.edu<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
 
-		<div class="site">http://ohionet.org<span class="full"></span></span><span class="php"></span><span class="drupal"></span></div>
+		<div class="site">http://ohionet.org<span class="full"></span></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
 
-		<div class="site">http://www.acm-ne.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
+		<div class="site">http://www.acm-ne.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
 
 		<div class="site">http://www.ophthalmicedge.org<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
 
@@ -67,7 +67,7 @@
 
 		<div class="site">http://www.real-user-monitoring.com<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
 
-		<div class="site">http://www.ctconservation.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span></span></div>
+		<div class="site">http://www.ctconservation.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class="pm"></span></div>
 
 		<div class="site">http://www.cradlefamily.com<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span><span class=notactive></span></div>
 		<div class="site">http://www.stopitnow.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
@@ -76,14 +76,14 @@
 
 		<h2>Soon to be released</h2>
 
-		<div class="site">http://drfa.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span>
+		<div class="site">http://drfa.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span><span class="pm"></span>
 		</div>
 		<div class="site">http://uppd.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span>
 		</div>
 	</div>
 		<div class="keys well span3">
 			<h4>Keys</h4> 
-			<div><span class="full"></span>Full Build</div> 
+			<div><span class="full"></span>In on Full Build</div> 
 			<div><span class="some"></span>Some Work</div>
 			<div><span class="php"></span>PHP</div> 
 			<div><span class="rails"></span>Rails</div> 
@@ -106,8 +106,6 @@
 		  <a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a>
 		  <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
 		</p>
-		  okay more coming soon..
-		</div></p>
 		</span>
 	</div>
 </div>
