Final work on support plans

--- a/app/views/content/support_plans.html.erb
+++ b/app/views/content/support_plans.html.erb
@@ -39,7 +39,7 @@ After this see please see "<a href="#ydig">Your discount IT Guy plan</a>"
 				<a name="wd">WatchDog Plan (WD)</a>
 			</h3>
 			<p>
-minimum 2 hours a month.<br>
+Minimum 2 hours a month.<br>
 This minimum affords you proactive security updates.<br>
 Server related security updates.<br>
 Test recovery of database and site backup.<br>
@@ -68,6 +68,11 @@ The hours “roll over” but do not replace the next quarter.
 For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 you would still need to pay for your full plan. These hours plus your new quarter's hours would be available to you.
 </p>
 
+<a name="2"><small>[2]</small></a>
+<p>
+	Any work that goes over the Watchdog prepaid hours will first be submitted for client approval before moving forward on. For example a Drupal Security update that is complex and will take 4 hours to update. I woul dfirst submit a request for the extra 2 billable hours.
+</p>
+
 </div>
 		<div class="span4">
 
@@ -89,7 +94,7 @@ For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
+					<tr class="info">
 						<td>
 							Backup Reviews
 						</td>
@@ -112,7 +117,7 @@ For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 
 							Discount Prices
 						</td>
 						<td>
-							
+							x
 						</td><td>x</td>
 
 					</tr>
